# agent-context-work-trial

./: .gitignore  README.md  test_parameter_fix.py
.edit_versions/: edit_operations.json  edit_versions.json
backend/: README.md  pyproject.toml  test_concurrency.py
backend/agent_backend/: __init__.py  agent.py  atomic_operations.py  chaos_monkey.py  edit_versioning.py  file_client.py  file_locks.py  file_server.py  server.py  version_api.py
files/: __init__.py  example.py
frontend/: editor-integration-example.html  package-lock.json  package.json  version-management-demo.html
frontend/src/: App.css  App.tsx  index.css  versionManager.css  versionManager.js
