[tool.poetry]
name = "agent-backend"
version = "0.1.0"
description = ""
authors = ["areke <markpklein@gmail.com>"]
readme = "README.md"
packages = [{include = "agent_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.36.0"}
pydantic-ai = "^1.0.10"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
